# TermokitDeliveryAPI

./: .env.dist  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: f16eed6ead4e_start_db.py
deliveryapi/: config.py  db.py  main.py  test.py  utils.py
deliveryapi/admin/: __init__.py
deliveryapi/admin/drivers/: crud.py  dependencies.py  schemas.py  views.py
deliveryapi/admin/items/: crud.py  dependencies.py  schemas.py  views.py
deliveryapi/admin/orders/: crud.py  dependencies.py  schemas.py  views.py
deliveryapi/admin/upload/: crud.py  schemas.py  views.py
deliveryapi/admin/users/: crud.py  dependencies.py  schemas.py  views.py
deliveryapi/auth/: crud.py  schemas.py  utils.py  views.py
deliveryapi/core/: config.py
deliveryapi/core/models/: __init__.py  db_helper.py  drivers.py  items.py  orders.py  users.py
deliveryapi/drivers/: models.py  views.py
deliveryapi/items/: views.py
deliveryapi/orders/: models.py  views.py
deliveryapi/telegram/: __init__.py  crud.py  schemas.py  utils.py  views.py
static/js/: bootstrap-input-spinner.js
templates/: cart.html  test.html  test2.html
